Working on correcting comments not resizing and overflowing their boxes.

--- a/public/stylesheets/programs.css
+++ b/public/stylesheets/programs.css
@@ -46,7 +46,6 @@
     margin-top: 5px;
     margin-left: auto;
     margin-right: auto;
-
     background-color: white;
 }
 .description {
@@ -56,10 +55,10 @@
 .commentHolder {
     /* display: flex;
     justify-content: center; */
-    text-align: center;
+    /* text-align: center; */
     margin-top: 40px;
     /* width: 650px; */
-    margin: auto;
+    /* margin: auto; */
     background-color: white;
     /* border: 1px solid black; */
 }
@@ -126,12 +125,13 @@
     padding: 10px;
     border-radius: 7px;
     background-color: white;
-    margin-top: 20px;
+    margin-top: 40px;
     width: 500px;
+    font-weight: 700;
 
 }
 .commentForm{
-    /* display: block; */
+    display: block;
     background-color: white;
     margin-top: 50px;
     /* width: 300px; */
@@ -144,24 +144,37 @@
     grid-template-areas:
         "thumbnail Name Name"
         "... Comment Comment";
-    padding-bottom: 30px;
+    padding-bottom: 10px;
     background-color: white;
 
 }
 .commentSubmit{
+    font-weight: 700;
     margin-top: 2px;
     background-color: white;
     box-sizing: border-box;
     padding: 3px;
     margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.commentSubmit:hover{
+    background-color: black;
+    color:white;
 }
 
 .commentComment{
+    display:flex;
     background-color: lightgray;
+    color: black;
+    padding-left: 5px;
+    padding-right: 5px;
+    /* height:auto; */
+    flex-wrap: wrap;
     /* height: inherit; */
     /* border-bottom: gray solid 1px; */
     grid-area: "Comment";
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .commentThumbnail{
@@ -179,8 +192,10 @@
 .commentInfo{
     border-radius: 1px 5px 5px;
     background-color: lightgray;
-    height: 50px;
-    width: 450px;
+    /* height: auto; */
+    width: 430px;
     /* margin-top: 30px; */
     margin-left: 10px;
+    color: black;
+    box-shadow: 0 0 5px gray;
 }
